--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://60u: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@github.com/SLHSCS/spring-hack-a-thon-2021-qyuo-jason-quack.git"
+    "url": "https://github.com/qyuo/lucent-note.git"
   },
   "keywords": [
     "Notes"
@@ -16,9 +16,9 @@
   "author": "qyuo & jason-quack",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/SLHSCS/spring-hack-a-thon-2021-qyuo-jason-quack/issues"
+    "url": "https://github.com/qyuo/lucent-note.git/issues"
   },
-  "homepage": "https://github.com/SLHSCS/spring-hack-a-thon-2021-qyuo-jason-quack#readme",
+  "homepage": "https://github.com/qyuo/lucent-note.git#readme",
   "dependencies": {
     "electron": "^17.1.2"
   }
